--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js",
+    "build:client": "node build/build.js",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "vue": "^2.0.1"
+    "es6-promise": "^4.0.5",
+    "eslint-plugin-promise": "^3.4.0",
+    "isomorphic-fetch": "^2.2.1",
+    "serve-favicon": "^2.3.2",
+    "vue": "^2.0.1",
+    "vue-server-renderer": "^2.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -23,12 +29,13 @@
     "babel-register": "^6.0.0",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
+    "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
     "eslint": "^3.7.1",
+    "eslint-config-standard": "^6.1.0",
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-html": "^1.3.0",
-    "eslint-config-standard": "^6.1.0",
     "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
@@ -39,9 +46,9 @@
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
-    "semver": "^5.3.0",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
     "vue-loader": "^9.4.0",
