--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mockingbot-frontend",
+  "name": "Goten",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Perry Poon <plrthink@gmail.com>",
@@ -14,6 +14,8 @@
     "es6-promise": "^4.0.5",
     "eslint-plugin-promise": "^3.4.0",
     "isomorphic-fetch": "^2.2.1",
+    "query-string": "^4.2.3",
+    "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.2",
     "vue": "^2.0.1",
     "vue-server-renderer": "^2.0.7"
